[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/mplus-1m-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Light_Fog1.png" type="Texture" id=2]
[ext_resource path="res://UI/GameOverScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1100, 624 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.666667, 0.666667, 0.666667, 1 )
border_width_left = 80
border_width_top = 6
border_width_right = 80
border_width_bottom = 6
border_color = Color( 0.666667, 0.666667, 0.666667, 1 )
shadow_color = Color( 0.254902, 0.254902, 0.254902, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 3, 3 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.521569, 0.521569, 0.521569, 1 )
border_width_left = 80
border_width_top = 6
border_width_right = 80
border_width_bottom = 6
border_color = Color( 0.521569, 0.521569, 0.521569, 1 )
shadow_color = Color( 0.254902, 0.254902, 0.254902, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 3, 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.8, 0.8, 0.8, 1 )
border_width_left = 80
border_width_top = 6
border_width_right = 80
border_width_bottom = 6
shadow_color = Color( 0.254902, 0.254902, 0.254902, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 3, 3 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 4 )

[node name="Panel2" type="Panel" parent="PanelContainer"]
modulate = Color( 0.917647, 0.635294, 0.635294, 0.266667 )
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0
custom_constants/separation = 125

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 944.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
text = "YOU DIED"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 215.0
margin_right = 944.0
margin_bottom = 337.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 357.0
margin_right = 587.0
margin_bottom = 122.0
custom_constants/separation = 40

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 230.0
margin_bottom = 41.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.305882, 0.305882, 1 )
text = "RESTART"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 230.0
margin_bottom = 122.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.305882, 0.305882, 1 )
text = "QUIT"
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
